# Robot26

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/mpu6050_driver/lib/mpu6050_driver/: mpu6050_node
install/mpu6050_driver/share/mpu6050_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/movement/src/: gait_controller.py  inverse_kinematics.py  main.py  robot_node.py  robot_server.py
src/movement/src/test/: check_bus.py  check_i2c.py  extend_legs.py  stretch_legs.py
src/mpu6050_driver/: CMakeLists.txt  SETTING.md
src/mpu6050_driver/include/mpu6050_driver/: mpu6050_driver.hpp
src/mpu6050_driver/src/: mpu6050_driver.cpp
